# adaptiv_co

./: .gitignore  CMakeLists.txt  README.md
adaptivlib/: CMakeLists.txt
adaptivlib/include/adaptiv/: definitions.hpp  macros.hpp
adaptivlib/include/adaptiv/cloud/: cloud.hpp
adaptivlib/include/adaptiv/cloud/protocol/: network_exchange.hpp  protocol.hpp  request.hpp  response.hpp
adaptivlib/include/adaptiv/cloud/protocol/messages/: date_time.hpp  rans.hpp  server_status.hpp
adaptivlib/include/adaptiv/cloud/protocol/targets/: rans.hpp
adaptivlib/include/adaptiv/math/: format.hpp  random.hpp
adaptivlib/include/adaptiv/net/: asio.hpp  beast.hpp  net.hpp
adaptivlib/include/adaptiv/property_tree/: property_tree.hpp
adaptivlib/include/adaptiv/serialization/: macros.hpp  property_tree.hpp
adaptivlib/include/adaptiv/system/: system.hpp
adaptivlib/include/adaptiv/traits/: detection_idiom.hpp  traits.hpp
adaptivlib/include/adaptiv/utility/: input.hpp  output.hpp
adaptivlib/include/adaptiv/utility/input/: auxiliary_parsers.hpp  character_parsers.hpp  numeric_parsers.hpp  parsers.hpp
adaptivlib/include/adaptiv/utility/output/: linux_mac_console.hpp  platform_console.hpp  posix_console.hpp  progress_bar.hpp  styles.hpp  windows_console.hpp
adaptivlib/src/: empty.cpp
adaptivlib/src/input/: input.cpp
adaptivlib/src/utility/output/: posix_console.cpp  windows_console.cpp
adaptivlib/tests/: CMakeLists.txt  input.cpp  main.cpp  protocol.cpp
adaptivlib/tests/include/tests/: input.hpp  testing.hpp
client/: CMakeLists.txt
client/include/: config.hpp  parser.hpp  parsers.hpp  ping.hpp  rpc_ping.hpp  rpc_solve.hpp  solve.hpp
client/src/: main.cpp  parsers.cpp  ping.cpp  rpc_ping.cpp  rpc_solve.cpp  solve.cpp
rsc/: index.html
server/: CMakeLists.txt
server/.backup_chat/: server.cpp  shared_state.cpp  shared_state.hpp  websocket_session.hpp
server/include/: server.hpp  shared_state.hpp  solver.hpp  websocket_session.hpp
server/src/: main.cpp  server.cpp  shared_state.cpp  solver.cpp  websocket_session.cpp
